my-python-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-python-appulan
  labels:
    app.kubernetes.io/instance: my-python-appulan
    app.kubernetes.io/name: my-python-appulan
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: my-python-appulan
      app.kubernetes.io/name: my-python-appulan
      app: my-python-appulan
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: my-python-appulan
        app.kubernetes.io/name: my-python-appulan
        app: my-python-appulan
    spec:
      containers:
      - name: my-python-appulan
        image: myacr321012ulan.azurecr.io/my-python-app:debug
        ports:
        - containerPort: 80
