grafana-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: tools
  labels:
    app: grafana
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app.kubernetes.io/instance: grafana
    app.kubernetes.io/name: grafana
