my-python-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-app-service
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30007
  selector:
    app: my-python-app
