my-python-appulan-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-python-appulan
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app.kubernetes.io/instance: my-python-appulan
    app.kubernetes.io/name: my-python-appulan
