prometheus-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: tools
  labels:
    app: prometheus
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 9090
      nodePort: 30007  # Ensure this port is available
  selector:
    app.kubernetes.io/component: server
    app.kubernetes.io/instance: prometheus
    app.kubernetes.io/name: prometheus
